--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>Shawn's First Thingy</title>
   </head>
   <body>
-    <img src="images/firefox-icon.png" alt="My test image">
+    <h1>Welcome to my humble thingy</h1>
+    <p>This is where I will type stuff</p>
   </body>
 </html>
